--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href="favicon.png" rel="icon" type="image/png" />
     <meta charset="utf-8" />
     <meta content="ie=edge" http-equiv="x-ua-compatible" />
     <meta name="description" content="<%= description %>" />
